# gitmun

./: .gitignore  README.md  about.hbs  about.html  about.toml  clone.html  index.html  package-lock.json  package.json  result-log.html  settings.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: RELEASE_TEMPLATE.md  release.yml
.github/workflows/: build-bundles.yml  publish-aur.yml  tests.yml  warm-xwin-cache.yml
packaging/flatpak/: com.cst8t.gitmun.yml
packaging/msix/: Package.appxmanifest
packaging/obs/: _service  appimage.yml  com.cst8t.gitmun.desktop  debian.changelog  debian.control  debian.rules  gitmun.dsc  gitmun.spec  home-cst8t-gitmun-project.conf  home-cst8t-gitmun-project.xml  local-npm-registry.changelog  local-npm-registry.control  local-npm-registry.dsc  local-npm-registry.rules  local-npm-registry.sh  local-npm-registry.spec
public/: browser-check.js
scripts/: generate-attributions.sh  generate-aur-package.sh  setup-linux.sh
scripts/obs/: build-cargo-vendor-tarball.sh  build-node-modules-sources.py  build-offline-source-inputs.sh  configure-osc.sh  publish-local-npm-registry-package.sh  publish-release-package.sh
src/: types.ts
src-tauri/: Cargo.toml  build.rs  config.example.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config_file.rs  instance_coordinator.rs  lib.rs  main.rs  theme.rs  window_manager.rs
src-tauri/src/avatar/: conditional.rs  forgejo.rs  github.rs  libravatar.rs  mod.rs  provider.rs
src-tauri/src/commands/: branches.rs  history.rs  mod.rs  repo.rs  settings.rs  store_update.rs
src-tauri/src/git/: cli.rs  commit_message.rs  error.rs  error_interpretation.rs  gix_handler.rs  handler.rs  mod.rs  types.rs
src-tauri/src/shell/: cli.rs  mod.rs
src-tauri/tests/: git.rs
src-tauri/themes/: dark.toml  light.toml
src-tauri/windows/: git-launch-condition.wxs  hooks.nsh
src/api/: commands.ts
src/components/: App.css  App.tsx  NoDiffToolWarning.css  NoDiffToolWarning.tsx  ProjectView.test.ts  ProjectView.tsx  Titlebar.css  Titlebar.test.tsx  Titlebar.tsx  Toast.css  Toast.tsx  icons.tsx
src/components/about/: AboutWindow.css  AboutWindow.tsx
src/components/center/: CenterPanel.css  CenterPanel.tsx  CherryPickBanner.tsx  CommitBox.tsx  ConfirmRevertDialog.css  FileRow.tsx  (+10 more)
src/hooks/: useCommitFiles.ts  useGitBranches.test.ts  useGitBranches.ts  useGitDiff.ts  useGitIdentity.ts  useGitLog.test.ts  useGitLog.ts  useGitRemotes.ts  useGitStashes.ts  useGitStatus.test.ts  useGitStatus.ts  useGitTags.ts  usePlatform.ts  useToast.test.ts  useToast.ts  useUpdateFlow.test.ts  useUpdateFlow.ts
src/i18n/: index.ts
src/styles/: animations.css  dialog.css  global.css  tokens.css
src/utils/: branchValidation.test.ts  branchValidation.ts  commitGraph.test.ts  commitGraph.ts  commitMessageDraft.test.ts  commitMessageDraft.ts  fileTree.test.ts  fileTree.ts  gitErrorDisplay.test.ts  gitErrorDisplay.ts  gitInputValidation.test.ts  gitInputValidation.ts  paneLayout.test.ts  paneLayout.ts  panelLayout.test.ts  panelLayout.ts  remoteActionState.test.ts  remoteActionState.ts  repoDisplayName.test.ts  repoDisplayName.ts  resultLog.test.ts  resultLog.ts  theme.ts  uiTextScale.test.ts  uiTextScale.ts
src/windows/: about.tsx  clone.tsx  main.tsx  result-log.tsx  settings.tsx
(+75 files in other folders)
