[package]
name = "gitmun"
version = "0.1.0"
description = "A cross-platform Git client"
authors = ["cst8t"]
license = "GPL-3.0-only"
edition = "2024"

[lib]
name = "gitmun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
gix = { version = "0.81.0", features = ["blocking-http-transport-reqwest-rust-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2.0.0"
reqwest = { version = "0.13", features = ["blocking", "rustls"], default-features = false }
url = "2"
md5 = "0.8"
base64 = "0.22"
notify = "8"
mime_guess = "2.0"
infer = "0.19"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
