[package]
name = "gitmun"
version = "0.1.0"
description = "A cross-platform Git client"
authors = ["cst8t"]
license = "GPL-3.0-only"
edition = "2024"

[lib]
name = "gitmun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
gix = { version = "0.81.0", features = ["blocking-http-transport-reqwest-rust-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-opener = "2.5"
tauri-plugin-os = "2.3"
tauri-plugin-shell = "2.3"
tauri-plugin-updater = "2.10"
reqwest = { version = "0.13", features = ["blocking", "rustls"], default-features = false }
url = "2"
md5 = "0.8"
base64 = "0.22"
notify = "8"
mime_guess = "2.0"
infer = "0.19"
tauri-utils = "2.8.3"
toml = "0.8"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
pci-info = { version = "0.3.4", default-features = false }
webkit2gtk = "2.0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "ApplicationModel",
    "Foundation_Collections",
    "Services_Store",
    "Win32_Foundation",
    "Win32_UI_Shell",
] }
windows-future = "0.2.1"
